fix image and long link overflow

--- a/history/style.css
+++ b/history/style.css
@@ -286,6 +286,11 @@ select {
   padding: 2em;
   margin-bottom: 1em;
   background: white;
+  overflow: hidden;
+}
+
+.post img {
+  width: 100%;
 }
 
 @media (max-width: 58em) {
@@ -314,7 +319,7 @@ select {
 
 .message a {
   word-wrap: break-word;
-  white-space: pre;
+  /*white-space: pre;*/
 }
 
 .replies {
